# Bear

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  .sqlfluff  CONTRIBUTING-en.md  CONTRIBUTING.md  LICENSE  Makefile  README-en.md  README.md  SECURITY.md  config.yaml  cookiecutter.json  justfile  mani.yml  mkdocs.yml  pdm_config.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.gitlab/: .gitlab-webide.yml
Docker/: ci.dockerfile  db.dockerfile  python.dockerfile
app/: main.py
app/core/: config.py
app/core/settings/: logger.py
app/core/utils/: conversions.py  func.py  logs.py
docs/: index.md  reference.md
docs/howto/: index.md
docs/reference/: index.md
docs/static/css/: mkdocstrings.css
hooks/: post_gen_project.py  pre_gen_project.py
notebooks/: test.ipynb
readme/: CONTRIBUTING-en.md  CONTRIBUTING-it.md  README-en.md  README-it.md
replay/: Bear.json
scripts/: create_examples.sh  delete_ds_store.sh  launch.sh
site/: 404.html  index.html  index.md  sitemap.xml
site/404/: index.html
site/documentation/: index.html
site/documentation/logger/: index.html
site/documentation/settings/: index.html
site/general/: index.html
site/reference/: index.html
site/search/: search_index.json
test/: test_functions.py
testone/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  justfile  poetry.toml  pyproject.toml  tox.ini
testone/.devcontainer/: docker-compose.yml
testone/.github/workflows/: publish_docker.yml
testone/.gitlab/issue_template/: bug.md  task.md
testone/Docker/: app.poetry.dockerfile  dev.dockerfile
testone/app/src/: config.py
testone/app/src/common/: security.py  utils.py
testone/app/src/core/: manager.py
testone/test/: test_functions.py
tests/: create_examples.sh  test_create.py
tests/config/: streamlit_advance.yml
{{cookiecutter.directory_name}}/: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  docker-compose.yml  mkdocs.yml  mypy.ini  poetry.toml  pyproject.toml
{{cookiecutter.directory_name}}/.devcontainer/: devcontainer.json  docker-compose.yml
{{cookiecutter.directory_name}}/Docker/: app.pdm.dockerfile  app.poetry.dockerfile  db.dockerfile  dev.dockerfile
{{cookiecutter.directory_name}}/app/: main.py
{{cookiecutter.directory_name}}/app/core/utils/: cache.py  dataframe.py  faker.py  files.py  time.py  utils.py
{{cookiecutter.directory_name}}/app/domain/utils/: manager.py
{{cookiecutter.directory_name}}/app/src/: config.py
{{cookiecutter.directory_name}}/app/src/common/: conversions.py  dataframe.py  db_format.py  logs.py  time.py
{{cookiecutter.directory_name}}/app/src/core/: manager.py
{{cookiecutter.directory_name}}/scripts/: generate_docs.py
{{cookiecutter.project_type}}/__cc_base/: cookiecutter.json
{{cookiecutter.project_type}}/__cc_base/{{cookiecutter.directory_name}}/: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_type}}/__cc_base/{{cookiecutter.directory_name}}/Docker/: app.dockerfile  app.poetry.dockerfile  db.dockerfile  dev.dockerfile
{{cookiecutter.project_type}}/__cc_base/{{cookiecutter.directory_name}}/app/: main.py
{{cookiecutter.project_type}}/__cc_base/{{cookiecutter.directory_name}}/app/src/: config.py
{{cookiecutter.project_type}}/__cc_base/{{cookiecutter.directory_name}}/app/src/common/: utils.py
{{cookiecutter.project_type}}/__cc_base/{{cookiecutter.directory_name}}/app/src/core/: manager.py
{{cookiecutter.project_type}}/__cc_base/{{cookiecutter.directory_name}}/test/: test_functions.py
{{cookiecutter.project_type}}/__cc_package/: cookiecutter.json
