[tool.poetry]
name = "PBG Bear"
version = "0.1.0"
description = "PBG Python template collection"
authors = ["PBG"]
license = "MIT"
homepage = "https://pythonbiellagroup.it"
repository = "https://github.com/PythonBiellaGroup/Bear"
documentation = ""
classifiers = [
    "Topic :: Cookiecutter",
    "Topic :: Template",
    "Topic :: Python",
    "Topic :: App"
]

[project]
name = "PBG Bear"
version = "0.1.0"
description = "PBG Python template collection"
authors = [
    {name = "PBG", email = "pythonbiellagroup@gmail.com"},
    {name = "PBG"},
]
dependencies = [
    "pyaml>=21.10.1",
    "Unidecode>=1.3.6",
    "python-dotenv>=0.21.0",
    "pydantic>=1.10.4",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.11",
    "mkdocs-macros-plugin>=0.7.0",
    "mkdocstrings>=0.19.1",
    "mkdocstrings-python>=0.8.3",
    "mkdocs-autorefs>=0.4.1",
    "mkdocs-redirects>=1.2.0",
    "mkdocs-jupyter>=0.22.0",
    "mkdocs-gallery>=0.7.6",
    "types-urllib3>=1.26.25.4",
    "types-requests>=2.28.11.7",
    "types-PyYAML>=6.0.12.2",
    "mkdocs-minify-plugin>=0.6.2",
]
requires-python = ">=3.9.8,<3.11.1"
license = {text = "MIT"}
classifiers = ["Topic :: Cookiecutter", "Topic :: Template", "Topic :: Python", "Topic :: App"]

[project.urls]
homepage = "https://pythonbiellagroup.it"
repository = "https://github.com/PythonBiellaGroup/Bear"
documentation = ""

[[tool.poetry.source]]
name = "pypi.org"
url = "https://pypi.org/simple"
default = true

[tool.poetry.dependencies]
python = ">=3.9.8, <=3.11"
pyaml = "^21.8.3"
Unidecode = "^1.3.2"
python-dotenv = "^0.20.0"
pydantic = "^1.9.0"

mkdocs = "^1.4"
mkdocs-material = "^8.5"
mkdocs-macros-plugin = "^0.7.0"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.8.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-redirects = "^1.1.0"
mkdocs-jupyter = "^0.22.0"
mkdocs-gallery = "^0.7.6"
types-urllib3 = "^1.26.11"
types-requests = "^2.27.14"
types-PyYAML = "^6.0.5"
mkdocs-minify-plugin = "^0.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
flake8-builtins = "^1.5.3"
autopep8 = "^1.5.7"
pylint = "^2.8.2"
bandit = "^1.7.0"
flake8-bandit = "^2.1.2"
autoflake = "^1.3.1"
ipython = "^7.28"
commitizen = "^2.20.0"
jupyter = "^1.0.0"
mypy = "0.982"
cookiecutter = "^2.1.1"
black = "^22.10.0"
ruff = "^0.0.213"
pytest = "^6.2.5"
pre-commit = "^2.21.0"
deptry = "^0.7.1"
pytest-cov = "^4.0.0"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "flake8-isort>=6.0.0",
    "flake8-builtins>=2.1.0",
    "autopep8>=2.0.1",
    "pylint>=2.15.9",
    "bandit>=1.7.4",
    "flake8-bandit>=4.1.1",
    "autoflake>=2.0.0",
    "pytest-cov>=4.0.0",
    "ipython>=8.8.0",
    "commitizen>=2.39.1",
    "jupyter>=1.0.0",
    "mypy>=0.991",
    "cookiecutter<3.0.0,>=2.1.1",
    "black>=22.12.0",
    "ruff>=0.0.213",
    "pytest>=6.2.5",
    "pre-commit>=2.21.0",
    "deptry>=0.7.1",
]

[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "pypi.org"
url = "https://pypi.org/simple"
verify_ssl = true
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
markers = [
    "functions: mark test for the base functionalities",
    "core: all about the core",
    "db: all about the database",
    "api: all about the api of the system",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch$prerelease"
version = "0.1.0"
version_files = [
    "__version__.py",
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

